@@ -1,3 +1,6 @@
+7/26/2006
+	- Add support for the SPF record type.
+
 7/21/2006
 	- DNSSEC.digestRRset could digest records in the wrong order.
 	  (reported by David Blacka <davidb@verisignlabs.com> and
